# supermarket-system

./: SDBase.db  SDBase.db.sqbpro  bill.txt  config.ini  main.py  pyproject.toml
Controller/: admin_screen_controller.py  login_screen_controller.py  operator_screen_controller.py  products_screen_controller.py
Model/: admin_screen_model.py  database.py  login_screen_model.py  operator_screen_model.py  products_screen_model.py
Reciepts/: 001.txt  20250507105843.txt  20250507113132.txt  20250507113515.txt  20250507113947.txt  20250509122415.txt  20250510131657.txt  20250511001802.txt  20250512170146.txt  20250512170215.txt  20250513112243.txt  20250513113038.txt  20250513114237.txt  20250513114302.txt  20250513114526.txt  20250513114555.txt  20250513115001.txt  20250513115026.txt  20250513115043.txt  20250513115329.txt  20250513115339.txt  20250513172552.txt  20250514133700.txt  20250514163347.txt  20250514163410.txt  20250514163630.txt  20250515124556.txt
View/: base_screen.py  screens.py
View/AdminScreen/: admin_screen.kv  admin_screen.py
View/LoginScreen/: login_screen.kv  login_screen.py
View/OperatorScreen/: operator_screen.kv  operator_screen.py
View/ProductsScreen/: products_screen.kv  products_screen.py
log/: logs.py
trials/: scanner.py
