[tool.poetry]
name = "s-management-system"
version = "0.1.0"
description = ""
authors = ["Billa Elisha <billatengbil@gmail.com>"]
readme = "README.md"
packages = [{include = "s_management_system"}]

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
